--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo" width="28px"></a>
+          <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="" width="28px"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,7 +53,7 @@
                     <button type="button" class="btn btn-outline-warning btn-lg">Play video</button>
 
                 </div>
-                <div class="col-md-6"><img src="/img/email_campaign_monochromatic.svg" alt="Header Image"></div>
+                <div class="col-md-6"><img src="/img/email_campaign_monochromatic.svg" alt=""></div>
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,186.7C384,160,480,96,576,90.7C672,85,768,139,864,138.7C960,139,1056,85,1152,74.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
@@ -86,7 +86,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="/img/seo_monochromatic.svg" alt="Image Seo">
+                                <img src="/img/seo_monochromatic.svg" alt="">
                             
                             </div>
                         <div class="col-md-6">
@@ -202,9 +202,9 @@
                   </div>
 
                   <div class="row my-3 g-3">
-                      <div class="col-md-4"><img src="/img/photo2.jpg" alt="Gallery Image" class="img-fluid"></div>
-                      <div class="col-md-4"><img src="/img/photo3.jpg" alt="Gallery Image" class="img-fluid"></div>
-                      <div class="col-md-4"><img src="/img/photo1.jpg" alt="Gallery Image" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo2.jpg" alt="" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo3.jpg" alt="" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo1.jpg" alt="" class="img-fluid"></div>
                   </div>
 
                   <div class="row mt-4 justify-content-end">
