--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <button type="button" class="btn btn-outline-secondary">Send</button>
                     </div>
                     <div class="col-md-5">
-                        <img src="/img/handshake.svg" alt="Image Form">
+                        <img src="/img/handshake.svg" alt="">
                     </div>
                 </div>
             </div>
