--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="" width="28px"></a>
+          <a class="navbar-brand" href="#"><img src="/img/logo.png" alt="logo company" width="28px"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,7 +53,7 @@
                     <button type="button" class="btn btn-outline-warning btn-lg">Play video</button>
 
                 </div>
-                <div class="col-md-6"><img src="/img/email_campaign_monochromatic.svg" alt=""></div>
+                <div class="col-md-6"><img src="/img/email_campaign_monochromatic.svg" alt="Email Marketing"></div>
             </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,192L48,197.3C96,203,192,213,288,186.7C384,160,480,96,576,90.7C672,85,768,139,864,138.7C960,139,1056,85,1152,74.7C1248,64,1344,96,1392,112L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
@@ -86,7 +86,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                             <div class="col-md-6">
-                                <img src="/img/seo_monochromatic.svg" alt="">
+                                <img src="/img/seo_monochromatic.svg" alt="Seo Work">
                             
                             </div>
                         <div class="col-md-6">
@@ -202,9 +202,9 @@
                   </div>
 
                   <div class="row my-3 g-3">
-                      <div class="col-md-4"><img src="/img/photo2.jpg" alt="" class="img-fluid"></div>
-                      <div class="col-md-4"><img src="/img/photo3.jpg" alt="" class="img-fluid"></div>
-                      <div class="col-md-4"><img src="/img/photo1.jpg" alt="" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo2.jpg" alt="Photo 1" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo3.jpg" alt="Photo 2" class="img-fluid"></div>
+                      <div class="col-md-4"><img src="/img/photo1.jpg" alt="Photo 3" class="img-fluid"></div>
                   </div>
 
                   <div class="row mt-4 justify-content-end">
@@ -232,8 +232,8 @@
                             Delectus templore corrupti enim ex? Molittia hial sint comune.
                         </p>
                     </div>
-                    <div class="col-md-5"><img src="img/coding_.svg" alt=""></div>
-                    <div class="col-md-5"><img src="img/marketing.svg" alt=""></div>
+                    <div class="col-md-5"><img src="img/coding_.svg" alt="Code"></div>
+                    <div class="col-md-5"><img src="img/marketing.svg" alt="Marketing"></div>
                     <div class="col-md-5"> <button type="button" class="btn btn-outline-warning mb-3">
                         Marketing
                     </button>
@@ -250,7 +250,7 @@
                     <p>Lorem ipsum arte gire erteo far li lolerlo.
                         Delectus templore corrupti enim ex? Molittia hial sint comune.
                     </p></div>
-                    <div class="col-md-5"><img src="img/revenue_.svg" alt=""></div>
+                    <div class="col-md-5"><img src="img/revenue_.svg" alt="Revenue"></div>
                 </div>
             </div>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,96L80,112C160,128,320,160,480,160C640,160,800,128,960,112C1120,96,1280,96,1360,96L1440,96L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
@@ -275,7 +275,7 @@
                         <button type="button" class="btn btn-outline-secondary">Send</button>
                     </div>
                     <div class="col-md-5">
-                        <img src="/img/handshake.svg" alt="">
+                        <img src="/img/handshake.svg" alt="Contact Form">
                     </div>
                 </div>
             </div>
